--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>קרקע בטוחה - חברת השקעות נדל &quot;ן ברמה אחרת | קרקע בטוחה-כרטיס ביקור </title>
+  <title>הדרך למכור את הקרקע שלך&quot;שוקי- קרקע בטוחה </title>
   <meta name="description"
     content="קרקע בטוחה הינה חברה הפועלת בתחום השקעות הנדל&quot;ן בדגש על איתור וקניית נכסים לא מפותחים בעלי פוטנציאל השבחה גבוה. קראו עוד בנושא." />
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
